# kludgetracker

./: .gitignore  Makefile.am  bootstrap  configure.ac
apps/: Makefile.am  gr_kludge_tracker.py  gr_list_todofixme.py  test.py  test.txt
python/: Makefile.am  __init__.py  generator.py  index.tmpl  parser.py  style.css  utils.py
