AC_PREREQ(2.60)
AC_INIT(todofixme, esyscmd([svnversion | tr -d '\n']))
AM_INIT_AUTOMAKE
AM_PATH_PYTHON([2.5])
##################################################
## Makefiles
##################################################
AC_CONFIG_FILES([ \
	Makefile \
	apps/Makefile \
	python/Makefile \
])
AC_OUTPUT
